--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,18 +28,78 @@
   border: none;
   background-color: #12762e;
   color: white;
-  border: 5px solid gray;
+  border: 4px solid gray;
   transition: 0.3s;
+  text-transform: uppercase;
+  font-family: "MedievalSharp", cursive;
+  letter-spacing: 3px;
+  padding: 1.5%;
+  font-size: 1.5rem;
 }
 
 .btn-1 {
   background-color: #c96f0f !important;
 }
 
-.btn-1:hover {
+button:hover {
+  cursor: pointer;
+}
+
+/* .btn-1:hover {
   transform: translateX(-30px);
+  border: 5px solid rgba(255, 0, 0, 0.3);
 }
 
 .btn-2:hover {
   transform: translateX(30px);
+  border: 5px solid rgba(255, 0, 0, 0.5);
+} */
+
+button:focus {
+  border: none;
+  outline: none;
+  border: 4px solid orange;
+}
+
+.item {
+  text-align: center;
+  margin-top: 10%;
+  margin-bottom: 5%;
+}
+
+/* img {
+  animation: rotation 30s infinite linear;
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+} */
+
+img {
+  transform: rotate(61deg);
+}
+
+.img-right {
+  transition: 0.3s;
+  transform: rotate(100deg);
+}
+
+.img-left {
+  transition: 0.3s;
+  transform: rotate(20deg);
+}
+
+@keyframes point {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(80deg);
+  }
 }
